# phantomstyle

./: CMakeLists.txt
funhouse/: CMakeLists.txt  FunHouse.cpp  PhTestApp.h  WidgetGallery.cpp
src/phantom/: CMakeLists.txt  phantomcolor.cpp  phantomcolor.h  phantomstyle.cpp  phantomstyle.h
src/styleplugin/: CMakeLists.txt  phantomstyleplugin.h
